2011-11-16  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (open-dedicated-output-stream): Open a stream with
	the right coding system.
	Change (:open-dedicated-output-stream port) message to
	(:open-dedicated-output-stream port coding-system), because Emacs
	can no longer determine the coding system based on the main
	network streams since they are binary now.

2011-11-11  Anton Kovalenko  <anton@sw4me.com>

	* slime.el (slime-ed): add bytep argument to destructure-case.
	When it's true, position is interpreted as byte offset.

2011-11-08  Helmut Eller  <heller@common-lisp.net>

	Restore old header format.

	* swank-rpc.lisp (parse-header, write-header)
	* slime.el (slime-net-decode-length, slime-net-encode-length)

2011-11-06  Helmut Eller  <heller@common-lisp.net>

	* swank-ecl.lisp (accept-connection): Fix buffering arg.
	* swank-cmucl.lisp (accept-connection): Fix buffering arg.

2011-11-06  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-run-test): Renamed from slime-run-one-test.
	(slime-toggle-test-debug-on-error): New.
	([test] break): Longer timeouts.

2011-11-06  Helmut Eller  <heller@common-lisp.net>

	Add portable versions for string-to-utf8 and utf8-to-string.

	* swank-backend.lisp (default-string-to-utf8)
	(default-utf8-to-string): New.
	(string-to-utf8, utf8-to-string): Use default implementations.

	* swank-lispworks.lisp (make-flexi-stream): Restored.
	(utf8-stream): Deleted.  The utf8 stuff is now used for the
	default implementation of utf8-to-string and would cause name
	clashes.

2011-11-06  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (swank-compile-string): For reader errors
	return nil not (values nil nil t).

2011-11-06  Helmut Eller  <heller@common-lisp.net>

	New wire format.

	Switch from character streams to binary streams.  Counting
	characters was error prone because some Lisps use utf-16
	internally and so READ-SEQUENCE can't be used easily.

	The new format looks so:

	  | byte0 | 3 bytes length |