@@ -1,3 +1,8 @@
+2011-11-19  Nikodemus Siivola  <nikodemus@random-state.net>
+
+	* swank-sbcl.lisp (restart-frame): Make it possible to restart
+	frames of anonymous functions -- at least some of the time.
+
 2011-11-16  Stas Boukarev  <stassats@gmail.com>
 
 	* swank.lisp (open-dedicated-output-stream): Open a stream with
